# token-saver

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  ROADMAP.md  SKILL.md  THIRD_PARTY_STRATEGIES.md  index.html  llms.txt  package.json
.github/workflows/: build-desktop.yml  ci.yml  registry-check.yml  release-candidate.yml  release-desktop.yml  sync-strategy-registry.yml  verify-v1.0.3-release.yml  (+1 more)
docs/: APP_ICON.md  ARCHITECTURE.md  AUTOMATIC_CONNECTORS.md  BENCHMARKS.md  BRAND_SYSTEM.md  CODEX_ACTIVE_REDUCTION.md  CODEX_IMPORT.md  HEADROOM_ADAPTER.md  MULTI_ENGINE_INTEGRATION_PLAN.md  ONE_CLICK_AUTOPILOT.md  PROJECT_HANDOFF.md  PROOF_LEDGER.md  RC1_INTERACTION_BUG.md  RELEASE_READINESS_1.1.0.md  RTK_ADAPTER.md  STRATEGY_ADAPTER_STATUS.md  STRATEGY_HUB.md  TOOL_RESULT_ISOLATION.md  UI_ARCHITECTURE.md  UPDATES.md  V1.md
references/: token-pricing.md
registry/: strategies.json
scripts/: check-startup-safety.mjs  check-version-sync.mjs  generate-app-icons.mjs  set-version.mjs  sync-strategy-registry.mjs  validate-strategy-registry.mjs  write-release-config.mjs
src/: main.ts  strategy.css  styles.css  tauri-api.d.ts  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_proof_ledger.sql
src-tauri/src/: agent_connectors.rs  app_updates.rs  claude_collector.rs  codex_output_optimizer.rs  codex_sessions.rs  headroom_adapter.rs  main.rs  proof_db.rs  rtk_adapter.rs  rtk_installer.rs  strategy_adapter.rs  tool_result_isolator.rs  tool_result_vault.rs
src/adapters/: codex.ts  (+5 more)
(+52 files in other folders)
