[package]
name = "token-saver-desktop"
version = "1.0.4"
description = "Local-first token efficiency desktop application for AI agents"
authors = ["SiruGao"]
edition = "2021"
license = "MIT"

[build-dependencies]
base64 = "0.22"
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-updater = "2.10"
time = "=0.3.47"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
